src/styles/components/Hamburger.module.css
.button {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  z-index: 10;
  position: relative;
}

.hambox {
  position: relative;
  width: var(--menu-button-side);
  height: var(--menu-button-side);
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.hamburger {
  position: absolute;
  width: calc(var(--hamburger-width) * 3 / 4);
}

.hamburger,
.hamburger::before,
.hamburger::after {
  display: inline-block;
  height: var(--hamburger-height);
  border-radius: var(--hamburger-radius);
  background-color: var(--color-secondary);
  transition: var(--transition-hamburger);
  transform-origin: center center;
}

.hamburger::before,
.hamburger::after {
  content: " ";
  position: absolute;
}

.hamburger::before {
  width: var(--hamburger-width);
  top: -8px;
  right: 0;
}

.hamburger::after {
  width: calc(var(--hamburger-width) * 1 / 2);
  top: 8px;
  right: 0;
}

/*
.hambox::before {
  content: " ";
  display: inline-block;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: var(--sidenav-color);
  z-index: -1;
  transform: scale(0);
  transition: var(--transition-hamburger);
}

.button:hover > .hambox::before {
  transform: scale(1.5);
}
*/

.button:hover > .hambox > .hamburger,
.button:hover > .hambox > .hamburger::after {
  width: var(--hamburger-width);
}

.button__open .hamburger::before {
  top: 0px;
  transform: rotate(90deg);
}

.button__open .hamburger {
  width: var(--hamburger-width);
  transform: rotate(-45deg);
}

.button__open .hamburger::after {
  top: 0px;
  width: var(--hamburger-width);
  opacity: 0;
}

